--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [ruby-head, 3.2.0, 3.1.2,  3.1, 3.0, 2.7]
+        ruby-version: [ruby-head, '3.2', '3.1.2', '3.1', '3.0']
 
     steps:
     - uses: actions/checkout@v3
